# gpodder-clone

./: .gitignore  auth.py  database.py  init.sql  main.py  models.py  pyproject.toml  routes.py  settings.py  utils.py
app/: main.py
app/models/: database.py
app/schemas/: schemas.py
app/utils/: auth.py  utils.py
views/: components.py  layouts.py  pages.py
